ecmascript/parser/tests/test262-error-references/fail/bcde05eea9466dfd.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/bcde05eea9466dfd.js:1:12
  |
1 | [...{a=0},]
  |            ^

error: Unexpected token
 --> $DIR/tests/test262-parser/fail/bcde05eea9466dfd.js:1:6
  |
1 | [...{a=0},]
  |      ^^^

